[tool.poetry]
name = "octo"
version = "0.1.0"
description = ""
authors = ["Aditya Gupta <mail@adityagupta.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ytmusicapi = "^1.10.1"
yt-dlp = "^2025.1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
